unneccesary scrollbars removed, cast bug fixed

--- a/jawmdb/src/components/DetailsView.css
+++ b/jawmdb/src/components/DetailsView.css
@@ -52,7 +52,7 @@
 }
 
 .Person-List {
-    overflow: scroll;
+    overflow-y: scroll;
     height: 750px;
     padding-left: 0.5em;
 }
