--- a/jawmdb/src/components/Favorites.css
+++ b/jawmdb/src/components/Favorites.css
@@ -43,7 +43,7 @@
 
   .favorites-bar {
     display: inline-flex;
-    overflow-y: scroll;
+    overflow-x: scroll;
     grid-column: 1 / 4;
   }
   
