--- a/jawmdb/src/components/MovieList.css
+++ b/jawmdb/src/components/MovieList.css
@@ -19,7 +19,7 @@
     margin: 0;
     grid-column: 1 / span 6;
 
-    overflow: scroll;
+    overflow-y: scroll;
   }
   
   .movie-list-item {
